// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`base config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`base(v2) config works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

import projection_1 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_1 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const name_1 = \\"Items\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

viewModels.push({
  name: name_1
, projection: projection_1
, deserializeState: deserializeState_1
})

export default viewModels
"
`;

exports[`base(v2) config works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

import projection_1 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_1 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_1 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const name_1 = \\"Items\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

viewModels.push({
  name: name_1
, projection: projection_1
, serializeState: serializeState_1
, deserializeState: deserializeState_1
})

export default viewModels
"
`;

exports[`config with serializeState/deserializeState works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testDeserializeState.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with serializeState/deserializeState works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testSerializeState.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testDeserializeState.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with snapshot + process.env works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with snapshot + process.env works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const snapshotAdapter_0 = {
  \\"module\\": process.env.VIEW_MODEL_TODOS_ADAPTER,
  \\"options\\": {
    \\"size\\": process.env.VIEW_MODEL_TODOS_OPTIONS_SIZE
  }
}
const snapshotAdapterModule_0 = interopRequireDefault(
  eval('require(snapshotAdapter_0.module)')
).default
const snapshotAdapterOptions_0 = snapshotAdapter_0.options
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
, snapshotAdapter: {
    module: snapshotAdapterModule_0,
    options: snapshotAdapterOptions_0 
  }
})

export default viewModels
"
`;

exports[`config with snapshot works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with snapshot works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

import snapshotAdapterModule_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testSnapshotAdapter.js\\"
const name_0 = \\"Todos\\"
const snapshotAdapterOptions_0 = {
  \\"size\\": 100
}
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
, snapshotAdapter: {
    module: snapshotAdapterModule_0,
    options: snapshotAdapterOptions_0 
  }
})

export default viewModels
"
`;

exports[`config with validator works correctly [client] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, deserializeState: deserializeState_0
})

export default viewModels
"
`;

exports[`config with validator works correctly [server] 1`] = `
"
import interopRequireDefault from \\"@babel/runtime/helpers/interopRequireDefault\\"

import projection_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testProjection.js\\"
import serializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/serialize_state.js\\"
import deserializeState_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/src/runtime/common/view-models/deserialize_state.js\\"
import validator_0 from \\"<MONOREPO_DIR>/packages/resolve-scripts/test/alias/files/testValidator.js\\"

const name_0 = \\"Todos\\"
const viewModels = []

viewModels.push({
  name: name_0
, projection: projection_0
, serializeState: serializeState_0
, deserializeState: deserializeState_0
, validator: validator_0
})

export default viewModels
"
`;
